# rinex2LatLng

./: CMakeLists.txt  README  README.md
include/: Ephemeris.h  EstimateVars.h  NavParser.h  ObsParser.h  ObsVars.h  RINEXParser.h  util.h
resources/: brdc0760.16n  farb0760.16d  farb0760.16s
src/: CMakeLists.txt  NavParser.cpp  ObsParser.cpp  main.cpp  util.cpp
tests/: CMakeLists.txt  tests.cpp
